RESOLVED FIXED312358
[Site Isolation] Main frame onload event does not fire if iframe load is blocked
https://bugs.webkit.org/show_bug.cgi?id=312358
Summary [Site Isolation] Main frame onload event does not fire if iframe load is blocked
rupin
Reported 2026-04-15 01:03:06 PDT
[Site Isolation] Main frame onload event does not fire if iframe load is blocked
Attachments
rupin
Comment 1 2026-04-15 01:05:25 PDT
rupin
Comment 2 2026-04-15 01:28:14 PDT
EWS
Comment 3 2026-04-15 13:31:38 PDT
Committed 311314@main (0e46277991b1): <https://commits.webkit.org/311314@main> Reviewed commits have been landed. Closing PR #62804 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.